k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lockedin-backend-ingress
  namespace: lockedin
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /lockedin(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: lockedin-backend
                port:
                  number: 8000
